@@ -67,6 +67,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 492214  statx(fd, NULL, AT_EMPTY_PATH) is supported since Linux 6.11
         but not supported in valgrind
 492663  Valgrind ignores debug info for some binaries
+493454  Missing FUSE_COMPATIBLE_MAY_BLOCK markers
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
